# echotrace

./: .dockerignore  .env.example  .gitignore  APPLE_SILICON_SETUP.md  CELERY_INTEGRATION_SUMMARY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  RAG_INTEGRATION_SUMMARY.md  README.md  README.zh-CN.md  README_MVP.md  SECURITY.md  VERSION.md  docker-compose.yml  fix-install-deps.sh  git-commit-push.sh  install-fast-china.sh  install-rag-deps.sh  install-with-python312.sh  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  quick-rebuild-and-test.sh  setup-python-env.sh  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: build-desktop.yml  python-tests.yml
apps/core/: .env.example  README.md  app.py  download_manager.py  errors.py  install-python312.sh  llm_service.py  run.sh  (+5 more)
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements.txt  test_auth.py  test_resources.py  test_search.py
config/: .env.example  config.yaml
configs/: default.yaml
docker/: pipeline.Dockerfile  pipeline.requirements.txt
docs/: ARCHITECTURE.md  BEFORE_AFTER_COMPARISON.md  BUGFIX_JOBS_SCHEDULER.md  CONTENT_CREATOR_EDITION.md  DASHBOARD_FIX.md  DESKTOP_SETUP.md  HOW_TO_PROCESS_JOBS.md  MODEL_SETUP.md  PRIVACY.md  RAG_AGENT_GUIDE.md  SCHEDULER_FIX_SUMMARY.md  SCHEDULER_VS_TASKQUEUE.md  WORKER_WEB_MANAGEMENT.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
protocol/: changelog.md  deploy-rules.md  dev-rules.md  product-engineering-protocol.md  security-rules.md
scripts/: start.sh
(+135 files in other folders)
